# xstarter

./: .bumpversion.cfg  .clang-format  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  INSTALL.md  Makefile  PKGBUILD  README.md  clean.sh  cmake_install.cmake  comp  config.h  configure.ac  generate.sh  memcheck.sh  mv_docs.sh  print.sh  todo.org  xstarter-0.5.0-Linux.deb  xstarter-0.5.1-Linux.deb  xstarter-0.5.2-Linux.deb  xstarter.1  xstarter.1.in  xstarter.conf  xstarter_run.sh
cmake/: FindGlib.cmake  cmake_uninstall.cmake.in
docs/: CNAME  downloads.html  emacs-interface-available-for-xstarter.html  emacs-interface-available.html  emacs-interface.html  index.html  posts.xml  screenshots-and-videos.html  version-0-7-0-released.html  version-0-8-0-released.html  version-0-8-1-released.html
docs/static/: styles.css
docs_source/xstarter/: scipio.toml
docs_source/xstarter/source/: index.md
docs_source/xstarter/source/pages/: downloads.html  downloads.md  emacs-interface.md  screenshots-and-videos.html  screenshots-and-videos.md
docs_source/xstarter/source/posts/: emacs-interface-available-for-xstarter.md  version-0-7-0-released.md  version-0-8-0-released.md  version-0-8-1-released.md
docs_source/xstarter/themes/default/: index.html  page.html  post.html
docs_source/xstarter/themes/default/static/: styles.css
src/: Makefile.am  config.h  list.c  list.h  main.c  run.c  scan.c  scan.h  settings.c  settings.h  term.c  term.h  utils.c  utils.h  utils_string.c  utils_string.h
src/test/test2/: script2.sh
tests/: CMakeLists.txt  expand_tilde.c  str_array.c  test.c  test.h  test_expand_tilde.h  test_settings.c  test_settings.h  test_str_array.h  test_strings.h  test_xs_dirname.h  xs_dirname.c
